ppx/tests/failing/7.ml
let _foo = fun [@reaml.component] () -> ()
